--- a/data-engineer.html
+++ b/data-engineer.html
@@ -69,11 +69,25 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698330287-sr-big-data-engineer'>TitanData Inc. Sr. Big Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://openclassrooms.recruitee.com/o/data-engineer'>
+      Data Engineer - OpenClassrooms
+    </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328650-senior-cloud-data-engineer-contract-'>Broadridge Senior Cloud Data Engineer (Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698330726-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698331529-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698330287-sr-big-data-engineer'>TitanData Inc. Sr. Big Data Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Plano, TX</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328650-senior-cloud-data-engineer-contract-'>Broadridge Senior Cloud Data Engineer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -113,7 +127,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698293537-data-engineer'>Devoteam Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698293537-data-engineer'>Devoteam Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -210,7 +224,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222148-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222148-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -279,7 +293,7 @@ uma empresa de tecnologia movida por pessoas apaixonadas e cheias de?...</p>
 Individuals seeking employment at Hinge are considered without regards to race,
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=orjZafwD&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=noVhkMwb&jvi=orjZafwD,Job&jvk=Job'>Medidata Solutions Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=orjZafwD&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=noVhkMwb&jvi=orjZafwD,Job&jvk=Job'>Medidata Solutions Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -385,11 +399,11 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Vancouver, British Columbia  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/servicenow/job/ow4obfwT'>ServiceNow Careers - Sr. Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/servicenow/job/ow4obfwT'>ServiceNow Careers - Sr. Data Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aofl/29f56b08-0f14-4b64-86e7-8904a82f956e'>Age of Learning  - Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/aofl/29f56b08-0f14-4b64-86e7-8904a82f956e'>Age of Learning  - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Glendale, CA  California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -469,18 +483,6 @@ Learning (ML), Simulation, Mapping and Autonomous Driving teams with?...</p>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999697940973-contract-job-data-engineer-with-customer-360-crm-etl-design-sql-python'>Bey Contract Job: Data Engineer with Customer 360, CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=or7lbfwO&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nEsOhMws'>Freedom Financial Network Careers - Data Engineer</a></h5> 
-<p><span class="badge badge-light">Tempe, Arizona</span></p>
-<p>Posted on:: 2019-10-23</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697925244-bcai-big-data-engineer'>Bosch Group BCAI_Big Data Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Bengaluru</span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/brainly/jobs/1895555'>Job Application for Data Engineer at Brainly</a></h5> 
-<p><span class="badge badge-light">Krak?w</span></p>
-<p>Posted on: 2019-10-22</p>
 <hr/>
 
 
