--- a/data-analyst.html
+++ b/data-analyst.html
@@ -72,7 +72,7 @@
 	
 <!--Begin body here --> 
 <h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://searchmetrics.recruitee.com/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
@@ -93,7 +93,7 @@
 <p><span class="badge badge-light">Paris Mountain View</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.indeed.com/job/data-analyst-088ca732a4c7cab8'>Data Analyst - Louisville, KY 40206 - Indeed.com</a></h5> 
+<h5><a href='https://www.indeed.com/job/data-analyst-088ca732a4c7cab8'>Data Analyst - Louisville, KY 40206 - Indeed.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698250348-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698250348-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia  Paris</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -204,13 +204,13 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">Los Angeles, CA  Los Angeles</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://gensler.wd1.myworkdayjobs.com/genslercareers/job/Washington-DC-US/Data-Analyst---Design-Labs_R-2001'>Data Analyst - Design Labs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gensler.wd1.myworkdayjobs.com/genslercareers/job/Washington-DC-US/Data-Analyst---Design-Labs_R-2001'>Data Analyst - Design Labs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The team is looking to hire a Data Analyst to support the strategic Cost 
 Intelligence initiative. This initiative is focused on collecting and curating the 
 wealth of?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://evite.applytojob.com/apply/vdp2wC1APK/Data-Analyst'>Data Analyst - Evite, Inc. - Career Page</a></h5> 
+<h5><a href='https://evite.applytojob.com/apply/vdp2wC1APK/Data-Analyst'>Data Analyst - Evite, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Apply to Data Analyst at Evite, Inc. in Los Angeles, CA.</p>
 <hr/>
@@ -309,7 +309,7 @@ organization?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CustomizedEnergySolutions/743999697653003-operations-data-analyst-retail-market-services'>Customized Energy Solutions Operations Data Analyst ? Retail Market Services | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CustomizedEnergySolutions/743999697653003-operations-data-analyst-retail-market-services'>Customized Energy Solutions Operations Data Analyst ? Retail Market Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -366,7 +366,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/careem/jobs/4496154002'>Job Application for Marketing Data Analyst at Careem</a></h5> 
+<h5><a href='https://boards.greenhouse.io/careem/jobs/4496154002'>Job Application for Marketing Data Analyst at Careem</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -388,7 +388,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://lumc.recruitee.com/o/dataanalyst-g19el92'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lumc.recruitee.com/o/dataanalyst-g19el92'>
       Data-analyst (G.19.EL.92) - LUMC
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -410,7 +410,7 @@ traditionally?...</p>
 Zayo by providing various analyses relating to Zayo's network and geographical
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1929443'>Job Application for Stage Data Analyst H/F at TripAdvisor</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1929443'>Job Application for Stage Data Analyst H/F at TripAdvisor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>il y a 4?jours ... Rejoignez la belle brochette de LaFourchette ! Derri?re LaFourchette, il y a une 
 ?quipe aux personnalit?s et aux talents multiples. Du commercial au geek,?...</p>
@@ -420,12 +420,12 @@ Zayo by providing various analyses relating to Zayo's network and geographical
 <p>Oct 17, 2019 ... Senior Project Manager and Data Analyst. Augusta, Maine, United States Full-
 time. Application closes: Oct 29, 2019. loading Fetching your Linkedin profile .</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/0D7926AC22'>Data Analyst - Human Domain Solutions, LLC (HDS)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/0D7926AC22'>Data Analyst - Human Domain Solutions, LLC (HDS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Human Domain Solutions,LLC is seeking a candidate to fill the role of Data 
 Analyst at The Office of Inspector General (OIG), Office of Audits (AUD), Audit?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/rentokil-initial/j/4CE50AB630/'>Data Centre Operations Analyst (UK based) - Rentokil Initial</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/rentokil-initial/j/4CE50AB630/'>Data Centre Operations Analyst (UK based) - Rentokil Initial</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... The DC Operations Analyst is responsible for the management and operation of 
 the storage, virtual data centre infrastructures, infrastructure and application?...</p>
@@ -456,7 +456,7 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dashlane/jobs/1927392'>Job Application for Data Analyst at Dashlane</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dashlane/jobs/1927392'>Job Application for Data Analyst at Dashlane</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -508,7 +508,7 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.bridgew.edu/postings/18039'>Bridgewater State University Portal | Assistant Professor- Statistics, Department of Mathematics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.bridgew.edu/postings/18039'>Bridgewater State University Portal | Assistant Professor- Statistics, Department of Mathematics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
